# ssg

./: Cargo.toml  README.md  build.rs  init.sh
.github/workflows/: test.yml  tests.yml
docs/: authoring-shortcuts.md  math-shorthand.md
src/: config.rs  lib.rs  main.rs  version.rs
src/content/: content.rs  metadata.rs  mod.rs  problem.rs  test.rs
src/formatted_text/: formatted_text.rs  geomdsl.rs  learning.rs  markdown_expandable.rs  markdown_math.rs  mod.rs  pandoc_latex_filters.rs  shell.rs
src/render/: content.rs  images.rs  mod.rs  render.rs  renderer.rs
src/test_assets/: index.yaml
src/test_assets/blogposts/b1/: body.md  metadata.yaml
src/test_assets/pages/about/: content.md  metadata.yaml
src/test_assets/problems/p1/: hint.tex  metadata.yaml  problem.tex  solution.tex
src/test_assets/problems/p2/: metadata.yaml  problem.tex  solution.tex
src/utils/: config.rs  content.rs  content_metadata.rs  images.rs  mod.rs  problem.rs  render.rs  shell.rs
