[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1.20.0"
serde_json = "1.0.136"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.1"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
clap = { version = "4.4", features = ["derive"] }
comrak = "0.38.0"

[dev-dependencies]
tempfile = "3.18.0"
